<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".AddEventDialog">

    <TextView
        android:id="@+id/textViewSelectedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selected_date"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Event_name"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/spinnerTimings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timings"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/spinnerEventVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:hint="@string/event_venue"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextPurpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/purpose"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupEventType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_event" />

        <RadioButton
            android:id="@+id/radioButtonStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_event" />

    </RadioGroup>

</LinearLayout>
