<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/netravati_auditorium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="40sp"
            android:text="@string/netravati_auditorium"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ground_floor_seminar_hall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="40sp"
            android:text="@string/ground_floor_seminar_hall"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/first_floor_seminar_hall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="40sp"
            android:text="@string/first_floor_seminar_hall"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/second_floor_seminar_hall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="40sp"
            android:text="@string/second_floor_seminar_hall1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/front_ground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="40sp"
            android:text="@string/front_ground"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/back_ground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="40sp"
            android:text="@string/back_ground"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
